# BackupMate

./: .pypirc  README.md  backup.json  db_backup_restore.py  inventory2.db  pyproject.toml  requirements.txt  setup.py
BackupMate/BackupMate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
DB_backup/: cli.py  main.py
tests/: test_cli.py  test_main.py
