# pyproject.toml

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
# Basic Project Information
name = "your_package"
version = "0.1.0"
description = "A package to backup and restore databases using SQLAlchemy."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

# Authors and Maintainers
authors = [
    { name = "Al Chris", email = "christopheraliu07@gmail.com" }
]

# Project URLs
urls = { 
    "Homepage" = "https://github.com/al-chris/your_package",
    "Documentation" = "https://github.com/al-chris/your_package#readme",
    "Source" = "https://github.com/al-chris/your_package",
    "Tracker" = "https://github.com/al-chris/your_package/issues"
}

# Dependencies
dependencies = [
    "SQLAlchemy>=1.4",
    # Note: 'argparse' is included in the Python standard library for Python >=3.2
]

# Optional (Development) Dependencies
optional-dependencies = {
    dev = [
        "pytest>=6.0",
        "pytest-mock>=3.0",
        "flake8>=3.8",
        "black>=22.0",
        "coverage>=6.0"
    ]
}

# Entry Points for CLI
scripts = { 
    "your-package" = "your_package.cli:main"
}

# Additional Metadata (Optional)
keywords = [ "database", "backup", "restore", "SQLAlchemy", "CLI" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries"
]

# Specify package inclusion
packages = [ "your_package" ]

# Include non-Python files specified in MANIFEST.in
include = [
    "your_package/*.py",
    "tests/*.py",
    "README.md"
]

[tool.setuptools.packages.find]
where = ["your_package"]

# Tool Configurations

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

# Black Configuration (Optional)
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Flake8 Configuration (Optional)
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

