# pyproject.toml

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "BackupMate"
version = "0.1.0"
description = "A package to backup and restore databases using SQLAlchemy."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Al Chris", email = "christopheraliu07@gmail.com"}
]

dependencies = [
    "SQLAlchemy>=1.4",
]

[project.urls]
Homepage = "https://github.com/al-chris/BackupMate"
Documentation = "https://github.com/al-chris/BackupMate#readme"
Source = "https://github.com/al-chris/BackupMate"
Tracker = "https://github.com/al-chris/BackupMate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.0",
    "flake8>=3.8",
    "black>=22.0",
    "coverage>=6.0"
]

[project.scripts]
backupmate = "BackupMate.cli:main"

[tool.setuptools.packages.find]
where = ["BackupMate"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]